Minor comment updates

--- a/diffplastRNN.ipynb
+++ b/diffplastRNN.ipynb
@@ -28,6 +28,22 @@
     },
     {
       "metadata": {
+        "id": "9iqFvKNk4H-p",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "## Extension of Uber's Differentiable Plasticity:\n",
+        "https://github.com/uber-research/differentiable-plasticity/\n",
+        "\n",
+        "##Examples/tutorials used:\n",
+        "\n",
+        "https://pytorch.org/tutorials/intermediate/char_rnn_classification_tutorial.html  \n",
+        "https://jovianlin.io/pytorch-with-gpu-in-google-colab/  "
+      ]
+    },
+    {
+      "metadata": {
         "id": "-SmJrhTsGo4K",
         "colab_type": "text"
       },
@@ -44,7 +60,6 @@
       },
       "cell_type": "code",
       "source": [
-        "# modified from https://jovianlin.io/pytorch-with-gpu-in-google-colab/\n",
         "import sys\n",
         "sys.version\n",
         "!nvidia-smi"
@@ -151,9 +166,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 85
+          "height": 68
         },
-        "outputId": "f55c5c49-7791-47bf-a2f8-012fedc2aab7"
+        "outputId": "1bdfb891-a1cd-4e53-e23c-08f4e3227c19"
       },
       "cell_type": "code",
       "source": [
@@ -192,22 +207,16 @@
         "    category_lines[category] = lines\n",
         "\n",
         "print(all_categories)\n",
-        "print(category_lines['Italian'][:5])\n",
-        "\n",
-        "# Hyperparameters\n",
-        "n_letters = len(all_letters)\n",
-        "n_categories = len(all_categories)\n",
-        "print(n_letters, n_categories)"
+        "print(category_lines['Italian'][:5])"
       ],
-      "execution_count": 50,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Ślusàrski -> Slusarski\n",
             "['Irish', 'French', 'Arabic', 'Polish', 'German', 'Korean', 'Portuguese', 'Scottish', 'Greek', 'Vietnamese', 'Spanish', 'Czech', 'Russian', 'Dutch', 'Chinese', 'English', 'Japanese', 'Italian']\n",
-            "['Abandonato', 'Abatangelo', 'Abatantuono', 'Abate', 'Abategiovanni']\n",
-            "57 18\n"
+            "['Abandonato', 'Abatangelo', 'Abatantuono', 'Abate', 'Abategiovanni']\n"
           ],
           "name": "stdout"
         }
@@ -259,11 +268,11 @@
         "\n",
         "    # Return an initialized, all-zero hidden state\n",
         "    def initialZeroState(self):\n",
-        "        return Variable(torch.zeros(1, self.input_size).type(ttype))\n",
+        "        return torch.zeros(1, self.input_size)\n",
         "\n",
         "    # Return an initialized, all-zero Hebbian trace\n",
         "    def initialZeroHebb(self):\n",
-        "        return Variable(torch.zeros(self.input_size, self.output_size).type(ttype))"
+        "        return torch.zeros(self.input_size, self.output_size)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -326,14 +335,12 @@
     },
     {
       "metadata": {
-        "id": "J5pOMFEPJEtd",
+        "id": "2CUPz-X84j5m",
         "colab_type": "text"
       },
       "cell_type": "markdown",
       "source": [
-        "# Choose the Loss Function and Optimizer\n",
-        "\n",
-        "Loss function (**criterion**) decides how the output can be compared to a class, which determines how good or bad the neural network performs. And the **optimizer** chooses a way to update the weight in order to converge to find the best weights in this neural network."
+        "# Initialize Hyperparameters"
       ]
     },
     {
@@ -344,11 +351,25 @@
       },
       "cell_type": "code",
       "source": [
-        "criterion = nn.CrossEntropyLoss()\n",
+        "# Hyperparameters\n",
+        "n_letters = len(all_letters)\n",
+        "n_categories = len(all_categories)\n",
+        "learning-rate = 1e-6\n",
+        "loss_func = nn.CrossEntropyLoss()\n",
         "optimizer = torch.optim.Adam(net.parameters(), lr=learning_rate)"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "T0N8trAe4tmj",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "below is sample code from original tutorial, ignore"
+      ]
     },
     {
       "metadata": {
